# AirJoyHisense

./: README.md
v1/source/: CMakeLists.txt  Readme.txt
v1/source/build.android/: update_dnssd.sh  update_openssl_to_public.sh  update_stl.sh  update_to_publish_new.sh
v1/source/build.android/jni/: Android.mk  Application.mk
v1/source/build.android/libs/armeabi/: testAirJoyClient  testAirJoyServer  testAirPlayServer  testAirTunesServer
v1/source/build.android/mdns/: Bonjour.h  testBonjour_aj
v1/source/build.linux/: build.arm.dongle.sh  build.arm.sh  build.x86.sh  update_airjoy_all_to_public_linux_arm.sh  update_airjoy_all_to_public_linux_x64.sh
v1/source/build.osx/: update_airjoy_all_to_public_osx.sh
v1/source/build.static.ios/: CMakeLists.txt  update_to_public.sh
v1/source/build.static.ios.armv7s/: CMakeLists.txt  update_to_public.sh
v1/source/build.static.ios.simulator/: CMakeLists.txt  update_to_public.sh
v1/source/build.static.osx/: CMakeLists.txt
v1/source/build.win32.vc2010/: update_airjoy_all_to_public_win32.bat
v1/source/public.airjoy.all/: ChangeLog.txt  Readme.txt  itunes课程视频地址.txt
v1/source/public.airjoy.all/Android/build.android/: cplib.sh  update_stl.sh
v1/source/public.airjoy.all/Android/build.testAirStream/: update_stl.sh
v1/source/public.airjoy.all/Android/include/: AirJoyClient.hpp  AirMediaClientVolume.hpp  AirPlayNsdDiscoveryListener.hpp  AirTunesServerListener.hpp
v1/source/public.airjoy.all/Android/testAirPlayServer/: testAirPlayServer.cpp
v1/source/public.airjoy.all/Android/testAirTunesServer/: testAirTunesServer.cpp
v1/source/public.airjoy.all/Android/测试报告/: AnyJoy2013-1-29.xls  AnyJoyTV版测试报告0201.xls
v1/source/public.airjoy.all/BonjourBrowser.OSX/: BonjourBrowser.dmg
v1/source/public.airjoy.all/IOS/AirJoyDemo/: AirMediaClient.hpp  AirMediaClientVideo.hpp
v1/source/public.airjoy.all/IOS/include/: AirJoyApi.hpp
v1/source/public.airjoy.all/IOS/lib/: merge_lib.sh
v1/source/public.airjoy.all/OSX/: CMakeLists.txt
v1/source/public.airjoy.all/OSX/include/: AirMediaClientAudio.hpp  AirPlayServerDefault.hpp  AirTunesServiceInfo.hpp
v1/source/public.airjoy.all/OSX/lib/: libairjoy.dylib  libairstream.dylib
v1/source/public.airjoy.all/OSX/testAirJoyCLient/: CMakeLists.txt
v1/source/public.airjoy.all/OSX/testAirPlayServer/: CMakeLists.txt
v1/source/public.airjoy.all/OSX/testAirTunesServer/: CMakeLists.txt  testAirTunesServer.cpp
v1/source/public.airjoy.all/Win32/: CMakeLists.txt
v1/source/public.airjoy.all/Win32/include/: AirFileServer.hpp  AirJoyDefault.hpp  AirJoyNsd.hpp  AirPlayNsd.hpp
v1/source/public.airjoy.all/Win32/testAirJoyClient/: CMakeLists.txt
v1/source/public.airjoy.all/Win32/testAirJoyServer/: CMakeLists.txt  testAirJoyServer.cpp
v1/source/public.airjoy.all/Win32/testAirPlayServer/: CMakeLists.txt  testAirPlayServer.cpp
v1/source/public.airjoy.all/Win32/testAirTunesServer/: CMakeLists.txt
v1/source/public.airjoy.all/linux.arm/include/: AirJoyServiceInfo.hpp  AirMediaClientPhoto.hpp  AirPlayNsdPublishListener.hpp  AirPlayServerListener.hpp
v1/source/public.airjoy.all/linux.arm/lib/: libcrypto.so.0.9.8  mDNSClientPosix  mDNSResponderPosix  mdnsd
v1/source/public.airjoy.all/linux.arm/testAirJoyClient/: CMakeLists.txt  testAirJoyClient.cpp
v1/source/public.airjoy.all/linux.arm/testAirJoyServer/: CMakeLists.txt
v1/source/public.airjoy.all/linux.arm/testAirPlayServer/: CMakeLists.txt
v1/source/public.airjoy.all/linux.arm/testAirTunesServer/: CMakeLists.txt  testAirTunesServer.cpp
v1/source/public.airjoy.all/linux.x64/include/: AirFileListener.hpp  AirPlayServer.hpp  AirPlayServiceInfo.hpp
v1/source/public.airjoy.all/linux.x64/testAirPlayServer/: testAirPlayServer.cpp
v1/source/src/: CMakeLists.txt
v1/source/src/3rdpartLib/Linux.arm/: dnsextd  mDNSIdentify  mDNSNetMonitor  mDNSProxyResponderPosix
v1/source/src/3rdpartSrc/: CMakeLists.txt
v1/source/src/3rdpartSrc/PlistCpp/: CMakeLists.txt  readme.txt
v1/source/src/3rdpartSrc/mDNSResponder-522.90.2/: tags
v1/source/src/3rdpartSrc/openssl-0.9.8r/: CHANGES  Configure  Makefile  NEWS  README  build.arm.mdc.dongle  build.midea.microwave.arm  build.midea.microwave.arm.gcc.4.3.2  build.mips.aircondition  config  e_os.h  makevms.com  openssl.spec
v1/source/src/AirCommon/: CMakeLists.txt
v1/source/src/AirCommon/include/: AirJoyLog.hpp  AirJoyTimer.hpp  AirJoyTypeDef.hpp  HttpMessage.hpp  HttpMessageType.hpp  HttpTextParam.hpp  TheBoost.hpp  UmpMessage.hpp  XmlParser.hpp
v1/source/src/AirCommon/src/: BoostDateTimePrebuild.cpp  BoostFileSystemPrebuild.cpp  BoostSystemPrebuild.cpp  BoostThreadPrebuild.cpp  HttpMessage.cpp  HttpMessageType.cpp  HttpTextParam.cpp  UmpMessage.cpp
v1/source/src/AirJoyAll/: CMakeLists.txt
v1/source/src/AirJoyAll/AirJoyX/: CMakeLists.txt
v1/source/src/AirJoyAll/AirPlayX/: CMakeLists.txt
v1/source/src/AirJoyAll/AirStreamX/: CMakeLists.txt
v1/source/src/AirJoyAll/All/: CMakeLists.txt
v1/source/src/AirNsd/: CMakeLists.txt
v1/source/src/AirNsd/include/: Nsd.hpp  NsdDiscoveryHandler.hpp  NsdPublishHandler.hpp  NsdServiceInfo.hpp
v1/source/src/AirNsd/src/: Nsd.cpp
v1/source/src/AirNsd/test/: CMakeLists.txt  testNsd.cpp
v1/source/src/AirSdp/: CMakeLists.txt
v1/source/src/AirSdp/include/: AirTimer.hpp  Sdp.hpp  SdpDiscoveryHandler.hpp  SdpDiscoveryWorker.hpp  SdpMaster.hpp  SdpMasterHandler.hpp  SdpNetwork.hpp  SdpPublishHandler.hpp  SdpPublishWorker.hpp  SdpServiceInfo.hpp  SdpWorker.hpp
v1/source/src/AirSdp/src/: SdpDiscoveryWorker.cpp  SdpNetwork.cpp  SdpPublishWorker.cpp
v1/source/src/AirSdp/test/: AirSdpServer.hpp  CMakeLists.txt  testSdp.cpp
v1/source/src/AirUmp/: CMakeLists.txt
v1/source/src/AirUmp/include/: JobQueue.hpp  NetBuffer.hpp  TcpClient.hpp  TcpClientMessage.hpp  TcpQueryMessage.hpp  TcpServer.hpp  TcpServerMessage.hpp  TcpSession.hpp  Udp.hpp  UdpMessage.hpp  Ump.hpp  UmpClient.hpp  UmpClientHandler.hpp  UmpHandler.hpp  UmpServer.hpp  UmpServerHandler.hpp  Worker.hpp
v1/source/src/AirUmp/src/: TcpClient.cpp  TcpSession.cpp  (+3 more)
v1/source/src/AirUtil/: CMakeLists.txt
(+695 files in other folders)
