#-------------------------------------------------------------------------------------
#
# AirJoyAll
#
#-------------------------------------------------------------------------------------
ADD_SUBDIRECTORY(AirPlayX)
ADD_SUBDIRECTORY(AirJoyX)
ADD_SUBDIRECTORY(AirStreamX)

#ADD_SUBDIRECTORY(All)
